Fix alignment of Fourier Transform paragraph

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
     min-width: 900px;
 }
 
-h1.heading {
+.heading {
     text-align: center;
 }
 
